--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Weav">
-        <activity android:name=".succeedActivity"></activity>
+        <activity android:name=".buildingActivity"></activity>
+        <activity android:name=".succeedActivity" />
         <activity android:name=".previewActivity" />
         <activity android:name=".getFilenameActivity" />
         <activity android:name=".ScanActivity" />
